--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link class="w-26 h-26" rel="icon" href="/public/Aigle_logo_sae301.png" />
     <title>Tik Tak</title>
   </head>
   <body>
